One bug fixed! Previously, touching the left wall and the right wall in the same row would make it dissapear when the player moved down. Simply adding 'white-space:pre' to the css for the table where the board is displayed fixes it! It would seem that, even in a table, html doesnt want to print white space. In this case, an entire <tr> of white space. All but one <td> of white space is ok though.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 #gameBoard *{
 	font-family: "Courier New", Courier, monospace;
+	white-space:pre;
 }
 
 #gameBoardTest *{
